--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   delightful_toast: ^1.1.0
   restart_app: ^1.2.1
   flutter_facebook_auth: ^6.2.0
+  image_picker: ^1.0.8
+  cached_network_image: ^3.3.1  
 # ------------------------ End-packages --------------------------- #
 dev_dependencies:
   flutter_test:
