--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_facebook_auth: ^6.2.0
   image_picker: ^1.0.8
   cached_network_image: ^3.3.1
+  animated_text_kit:
 # ------------------------ End-packages --------------------------- #
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
     - assets/images/features/
     - assets/images/payment_method/
     - assets/images/network/
+    - assets/images/chat/
 
 
 # ------------------------ Local Fonts --------------------------- #
