--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-/utils/constants/api_constants
+/utils/constants/api_constants.dart
