--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   image_picker: ^1.0.8
   cached_network_image: ^3.3.1
   animated_text_kit:
+  appinio_swiper: ^2.1.1
+  flutter_localizations:
+    sdk: flutter
 # ------------------------ End-packages --------------------------- #
 dev_dependencies:
   flutter_test:
@@ -63,7 +66,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  generate: true
 
 # ------------------------ Local Assets --------------------------- #
 
