--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   cached_network_image: ^3.3.1
   animated_text_kit:
   appinio_swiper: ^2.1.1
+  toggle_switch: ^2.3.0
+  device_preview: ^1.1.0
   flutter_localizations:
     sdk: flutter
 # ------------------------ End-packages --------------------------- #
