--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   # local storage
   get_storage:
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
+  path_provider: ^2.1.3
   # utils:
   intl:
   logger:
